feat: add test data analysis uploads
